fixed the z-index of the top nav correctly

--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,7 @@ header {
 		top: 12rem;
 		left: 3rem;
 		transform: scale(1.2);
+		z-index: 0;
 	}
 
 	.top_nav {
@@ -170,7 +171,7 @@ header {
 		max-width: 950px;
 		position: fixed;
 		background-color: var(--color-slogan);
-		z-index: 0;
+		z-index: 2;
 		border-radius: 0 1.125em 5em 0;
 	}
 
